<?xml version="1.0"?>
<package format="2">
  <name>robot_driver_fw</name>
  <version>1.0.0</version>
  <description>robot driver framework package</description>

  <maintainer email="atmobi.support@ml.jp.panasonic.com">Panasonic Advanced Technology Development Co.,Ltd.</maintainer>

  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_driver_msgs</depend>
  <depend>libmodbus-dev</depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
