<?xml version="1.0"?>
<package>
  <name>robot_driver_msgs</name>
  <version>2.5.2</version>
  <description>The robot_driver_msgs package</description>
  <maintainer email="atmobi.support@ml.jp.panasonic.com">Panasonic Advanced Technology Development Co.,Ltd.</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <export>
  </export>
</package>
